--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,33 +7,35 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
- 
-
-    <div class="main w-full min-h-screen bg-zinc-900">
-        <div class="form px-10 py-10 text-white" >
+     <div class="main w-full min-h-screen bg-zinc-900">
+        <div class="form px-10 py-10 text-white">
             <form action="/create" method="post">
-                <input class="block w-full rounded-md outline-none px-5 py-2 bg-zinc-800" type="text" placeholder="Title goes Here.." name="title">
-                <textarea class="block w-full px-5 rounded-md outline-none mt-2 py-2 bg-zinc-800 resize-none" placeholder="Write your task details here.." name="details"></textarea>
-                <input class="mt-2 bg-blue-600 rounded-md px-5 py-2" type="submit" value="Create Task">
+                <input class="block w-full rounded-md px-5 py-2 bg-zinc-800" type="text" placeholder="Title goes here.." name="title">
+                <textarea class="block w-full rounded-md mt-2 px-5 py-2 bg-zinc-800 resize-none" placeholder="Write your task details here.." name="details"></textarea>
+                <input class="mt-2 bg-blue-600 px-5 py-2 rounded-md" type="submit" value="Create Task">
             </form>
-
-            
-        </div> 
-        
-        <div class="tasks flex gap-3 flex-wrap p-10">
-            <% if(files && files.length > 0) { %>
-                <% files.forEach(function(val) { %>
-                    <div class="task w-72 px-3 py-4 rounded-md bg-zinc-800">
-                        <h1 class="text-white text-3xl tracking-tighter"><%= val %></h1>
-                        <a class="text-blue-500 rounded-mg mt-3 inline-block" href="/file/<%= val %>">Read more.</a>
+        </div>
+        <div class="tasks p-10 flex gap-5 flex-wrap"> 
+            <% if(files.length > 0){ %>
+                <% files.forEach(function(val){ %>
+                    <div class=" w-80 px-3 py-4  bg-zinc-800 rounded-md">
+                        <h1 class="text-white text-3xl "><%=  val %></h1>
+                        <div class="flex w-full justify-between item-center mt-3">
+                            <a  class="text-blue-600 inline-block " href="/file/<%= val %>">Read more.</a>
+                            <a  class="text-zinc-600 " href="/edit/<%= val %>">edit</a>
+                            <a class="delete-link text-yellow-600" href="/delete/<%= val %>" data-file="<%= val %>">delete</a>
+                        </div>
                         
                     </div>
-                <% }); %>
-            <% } else { %>
-                <p>No tasks available</p>
-            <% } %>
+                <% }) %>
+            <% }else{ %>
+                <h3 class="text-zinc-600">No tasks yet..</h3>
+            <%  } %>
+           
+            
         </div>
-        
-    </div>
+
+     </div>
+    
 </body>
 </html>
