--- a/views/show.ejs
+++ b/views/show.ejs
@@ -6,15 +6,12 @@
     <title>Document</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
- 
-
-    <div class="main w-full min-h-screen bg-zinc-900 p-10">
-        <a class="text-blue-600 inline-block mb-10" href="/">Go Back To Home</a>
-        <h1 class="text-3xl tracking-tighter">file ka nama</h1>
-        <p text-xl mt-2>Data</p>
-
-    </div> 
- 
+<body >
+    <div class=" main w-full min-h-screen p-10 bg-zinc-800">
+        <a class="text-blue-600 text-2xl inline-block mb-10 " href="/">Go back to home</a>
+        <h2 class="text-white text-2xl"><%= filename %> </h2>
+        <p class="text-white text-2xl"><%= filedata %></p>
+    </div>
+    
 </body>
 </html>
